--- a/src/main/webapp/WEB-INF/messages/messages_pl_PL.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_pl_PL.properties
@@ -1,1 +1,14 @@
-app.general.create=test
+app.general.create=utworz
+app.general.edit=edycja
+app.general.details=szczegoly
+app.general.title=tytul
+app.general.back=powrot
+app.general.submit=wyslij
+app.general.edit=edycja
+
+app.layout.header.roles=role
+app.role.empty=brak rol
+app.role.name=nazwa
+
+NotNull.roleForm.name=Role name can not be null
+NotEmpty.roleForm.name=Role name can not be empty
