spring security - auto login

--- a/src/main/webapp/WEB-INF/messages/messages_pl_PL.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_pl_PL.properties
@@ -12,3 +12,12 @@ app.role.name=nazwa
 
 NotNull.roleForm.name=Role name can not be null
 NotEmpty.roleForm.name=Role name can not be empty
+
+app.general.register=register
+app.user.username=username
+app.user.password=password
+
+NotNull.userForm.username=Username can not be null
+NotEmpty.userForm.username=Username can not be empty
+NotNull.userForm.password=Password can not be null
+NotEmpty.userForm.password=Password can not be empty
