--- a/src/main/webapp/WEB-INF/messages/messages_pl_PL.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_pl_PL.properties
@@ -21,3 +21,4 @@ NotNull.userForm.username=Username can not be null
 NotEmpty.userForm.username=Username can not be empty
 NotNull.userForm.password=Password can not be null
 NotEmpty.userForm.password=Password can not be empty
+Duplicate.userForm.username=Change username
